# ta-data

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  config.yaml  install.ps1  pyproject.toml  tallysync.spec  tallysync_exports.tdl  version_info.txt
.claude/: settings.local.json
.github/workflows/: build.yml
app/: __init__.py  agent.py  main.py
app/api/: __init__.py  app.py
app/api/routes/: status.py  sync.py
app/client/: tally_client.py  tally_health.py
app/config/: settings.py
app/database/: __init__.py  bulk.py  engine.py  session.py
app/database/migrations/: env.py
app/logging/: setup.py
app/models/db/: __init__.py  base.py  company.py  inventory.py  ledger.py  purchase_order.py  raw_archive.py  sync_state.py  voucher.py
app/models/domain/: __init__.py  company.py  godown.py  ledger.py  ledger_group.py  purchase_order.py  stock_group.py  stock_item.py  unit.py  voucher.py  voucher_type.py
app/parser/: __init__.py  base.py  company.py  godown.py  ledger.py  ledger_group.py  purchase_order.py  stock_group.py  stock_item.py  unit.py  voucher.py  voucher_type.py
app/repositories/: __init__.py  base.py
app/repositories/postgres/: __init__.py  checkpoint.py  company.py  inventory.py  ledger.py  purchase_order.py  raw_archive.py  voucher.py
app/scheduler/: __init__.py  scheduler.py
app/services/: __init__.py  base.py  company.py  masters.py  purchase_order.py  voucher.py
app/sync/: __init__.py  engine.py  streaming.py
app/tally_sdk/: __init__.py  builder.py  requests.py
app/windows_service/: installer.py  service.py
app/xml/: company.xml  cost_category.xml  cost_centre.xml  currency.xml  godown.xml  ledger.xml  ledger_group.xml  stock_group.xml  stock_item.xml  template_engine.py  unit.xml  voucher.xml  voucher_type.xml
scripts/: _field_audit.py  _field_audit3.py  _field_audit4.py  probe_reports.py  setup_tally_tdl.ps1  tally_probe.py  tally_probe2.py  tally_probe3.py  tally_probe4.py  tally_probe5.py
tests/: conftest.py
tests/mock_tally/: server.py
tests/unit/: test_api.py  test_database.py  test_db_models.py  test_fidelity_pipeline.py  test_logging.py  test_raw_archive.py  test_repositories.py  test_scheduler.py  test_settings.py  test_tally_client.py  test_tally_health.py  test_template_engine.py
tests/unit/parser/: test_base.py  test_company.py  test_godown.py  test_ledger.py  test_ledger_group.py  test_stock_group.py  test_unit.py  (+3 more)
(+5 files in other folders)
