[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tally-sync"
version = "0.1.0"
description = "Production-grade TallyPrime 7 synchronization agent"
requires-python = ">=3.12"
dependencies = [
    # HTTP
    "requests>=2.32",
    # XML parsing (streaming — not xmltodict)
    "lxml>=5.2",
    # Data validation and settings
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    # Logging
    "loguru>=0.7",
    # Database — PostgreSQL
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    # Database — MongoDB (optional)
    "pymongo>=4.7",
    # Scheduler
    "apscheduler>=3.10",
    # Internal control API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    # Windows Service
    "pywin32>=306",
    # Secrets management
    "keyring>=25.2",
    # CLI tooling
    "click>=8.1",
    # Retry
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "responses>=0.25",
    "factory-boy>=3.3",
    "freezegun>=1.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests>=2.32",
    "types-pyyaml>=6.0",
]

[project.scripts]
tally-sync = "app.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ── Ruff (linting + formatting) ──────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "TID", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
addopts = "-v --tb=short --cov=app --cov-report=term-missing"
log_cli = true
log_cli_level = "DEBUG"

[tool.coverage.run]
source = ["app"]
omit = ["app/windows_service/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
